tests/v0-fail/reject.out
Running <root>/reject.cli ...
printf "hello\n"
---
hello
---
ERROR: pattern reject at line <root>/reject.cli:5 does not match output line "<eof>"
matching Any(End)
  matching End
  -matching Literal(hello)
  -literal match: "hello" == "hello"
-matching Literal(hello)
-literal match: "hello" == "hello"

❌ FAIL

<root>/reject.cli FAILED
Error: pattern reject at line <root>/reject.cli:5 does not match output line "<eof>"

