tests/v0-fail/reject.cli
#!/usr/bin/env clitest --v0

$ echo "hello"
reject {
    ! hello
}
*
